[workspace]
resolver = "2"
members = [
    "crates/fixed-point",
    "crates/hyperdrive-math",
    "crates/hyperdrive-wrappers",
    "crates/test-utils",
    "crates/hyperdrive-test-utils",
    "bindings/hyperdrivepy",
]

[workspace.package]
name="hyperdrive-rs"
version="0.15.6"
authors = [
    "Alex Towle <alex@delv.tech>",
    "Dylan Paiton <dylan@delv.tech>",
    "Jonny Rhea <jonny@delv.tech>",
    "Matthew Brown <matt@delv.tech>",
    "Mihai Cosma <mihai@delv.tech>",
    "Ryan Goree <ryan@delv.tech>",
    "Sheng Lundquist <sheng@delv.tech>",
]
