[workspace]
resolver = "2"
members = [
    "crates/fixed-point",
    "crates/hyperdrive-math",
    "crates/hyperdrive-wrappers",
    "crates/test-utils",
    "crates/hyperdrive-test-utils",
    "bindings/hyperdrivepy",
]

[workspace.package]
name="hyperdrive-rs"
version="0.16.2"
authors = [
    "Alex Towle <alex@delv.tech>",
    "Dylan Paiton <dylan@delv.tech>",
    "Jonny Rhea <jonny@delv.tech>",
    "Matthew Brown <matt@delv.tech>",
    "Mihai Cosma <mihai@delv.tech>",
    "Ryan Goree <ryan@delv.tech>",
    "Sheng Lundquist <sheng@delv.tech>",
]

[workspace.lints.clippy]
comparison_chain = "allow"

[workspace.profile.release]
opt-level = 3
strip = true
debug = false
codegen-units = 1
lto = true
