[workspace]
resolver = "2"
members = [
    "crates/fixedpointmath",
    "crates/hyperdrive-wrappers",
    "crates/test-utils",
    "crates/hyperdrive-test-utils",
    "crates/hyperdrive-math",
    "bindings/hyperdrivepy",
]

[workspace.package]
name = "hyperdrive-rs"
version = "0.18.0"
authors = [
    "Alex Towle <alex@delv.tech>",
    "Dylan Paiton <dylan@delv.tech>",
    "Jonny Rhea <jonny@delv.tech>",
    "Matthew Brown <matt@delv.tech>",
    "Mihai Cosma <mihai@delv.tech>",
    "Ryan Goree <ryan@delv.tech>",
    "Sheng Lundquist <sheng@delv.tech>",
]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://hyperdrive.box/"
documentation = "https://docs.hyperdrive.box"
repository = "https://github.com/delvtech/hyperdrive-rs"
description = "API for simulating Hyperdrive smart contract transactions."

[workspace.dependencies]
fixedpointmath = { version = "0.18.0", path="crates/fixedpointmath" }
hyperdrive-wrappers = { version = "0.18.0", path="crates/hyperdrive-wrappers" }
hyperdrive-math = { version = "0.18.0", path="crates/hyperdrive-math" }

[workspace.lints.clippy]
comparison_chain = "allow"

[workspace.profile.release]
opt-level = 3
strip = true
debug = false
codegen-units = 1
lto = true

[workspace.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "assets/katex_header.html"]