[project]
name = "hyperdrivepy"
version = "0.18.0"
authors = [
    { name = "Dylan Paiton", email = "dylan@delv.tech" },
    { name = "Matthew Brown", email = "matt@delv.tech" },
    { name = "Sheng Lundquist", email = "sheng@delv.tech" },
]
requires-python = ">=3.8"
# We point this readme to the one in hyperdrivepy
readme = "bindings/hyperdrivepy/README.md"

dependencies = [
  "hyperdrivetypes >= 1.0.18.5",
]

[project.optional-dependencies]
dev = [
  "black==24.*",
  "build",
  "cibuildwheel",
  "jinja2",
  "platformdirs",
  "pylint",
  "pyright",
  "pytest",
  "setuptools",
  "setuptools-rust",
  "twine",
  "wheel",
]

all = ["hyperdrivepy[dev]"]


[project.urls]
Homepage = "https://github.com/delvtech/hyperdrive-rs"
Issues = "https://github.com/delvtech/hyperdrive-rs/issues"

[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["--tb=short"]
norecursedirs = ".git examples hyperdrive"
python_files = ["*_test.py", "*_tests.py"]

[tool.pylint.format]
max-line-length = "120"

[tool.black]
line-length = "120"
extend-exclude = "\\.ipynb"

[tool.pylint.MASTER]
ignore = [
  "hyperdrive",
  ".venv",
  ".vscode",
  "docs",
]
notes = ["FIXME"]
max-line-length = 120
ignore-docstrings = 'no'
ignore-imports = 'no'
disable='duplicate-code'
extension-pkg-allow-list="hyperdrivepy"

[tool.pyright]
include = ["bindings/hyperdrivepy"]
exclude = [
  "crates/",
  ".venv",
  ".vscode",
  "docs",
  "**/__pycache__"
]
reportMissingImports = false