[package]
name = "hyperdrivepy"
edition = "2021"
version = { workspace = true }
authors = ["Dylan Paiton", "Matt Brown", "Sheng Lundquist"]
description = "Python wrappers for the Hyperdrive AMM"

[lib]
name = "hyperdrivepy"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
ethers = "2.0.8"
eyre = "0.6.8"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }

fixed-point = { path = "../../crates/fixed-point" }
hyperdrive-math = { path = "../../crates/hyperdrive-math" }
hyperdrive-wrappers = { path = "../../crates/hyperdrive-wrappers" }

pyo3 = { version = "0.21.2", features = ["abi3-py37", "multiple-pymethods"] }
