[project]
name = "hyperdrivepy"
version = "0.16.5"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/delvtech/hyperdrive-rs"
Issues = "https://github.com/delvtech/hyperdrive-rs/issues"

[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["python", "src"]
