[package]

name = "hyperdrive-math"
version = { workspace = true }
edition = "2021"

[[test]]

name = "integration-tests"
path = "tests/integration_tests.rs"

[dependencies]

# External dependencies
ethers = "2.0.8"
eyre = "0.6.8"
rand = "0.8.5"

# Workspace dependencies
fixed-point = { path = "../fixed-point" }
fixed-point-macros = { path = "../fixed-point-macros" }
hyperdrive-wrappers = { path = "../hyperdrive-wrappers" }
test-utils = { path = "../test-utils" }
rand_chacha = "0.3.1"
tracing = "0.1"

[dev-dependencies]

# External dependencies
rand_chacha = "0.3.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-test = "0.1"

# Workspace dependencies
test-utils = { path = "../test-utils" }
