[package]

name = "hyperdrive-math"
version = { workspace = true }
edition = "2021"

[dependencies]

# External dependencies
ethers = "2.0.8"
eyre = "0.6.8"
rand = "0.8.5"

# Workspace dependencies
fixed-point = { path = "../fixed-point" }
hyperdrive-wrappers = { path = "../hyperdrive-wrappers" }

[dev-dependencies]

# External dependencies
rand_chacha = "0.3.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-test = "0.1"

# Workspace dependencies
hyperdrive-test-utils = { path = "../hyperdrive-test-utils" }
