[package]

name = "hyperdrive-math"
edition = "2021"
version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/crate/hyperdrive-math"
repository = { workspace = true }
description = { workspace = true }
readme = { workspace = true }

[dependencies]

# External dependencies
ethers = "2.0.11"
eyre = "0.6.8"
rand = "0.8.5"

# Workspace dependencies
fixedpointmath = { workspace=true }
hyperdrive-wrappers = { workspace=true }

[dev-dependencies]

# External dependencies
rand_chacha = "0.3.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-test = "0.1"

# Workspace dependencies
hyperdrive-test-utils = { path = "../hyperdrive-test-utils" }

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "assets/katex_header.html"]