[package]
name = "hyperdrive-test-utils"
edition = "2021"
version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
readme = { workspace = true }

[[bin]]
name = "pause"
path = "src/bin/pause.rs"

[[example]]
name = "test_chain"

[dependencies]

# External dependencies.
async-trait = "0.1.73"
dotenvy = "0.15"
envy = "0.4.2"
ethers = "2.0.11"
eyre = "0.6.8"
lazy_static = "1.4.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

# Workspace dependencies.
fixedpointmath = { path = "../fixedpointmath" }
hyperdrive-wrappers = { path = "../hyperdrive-wrappers" }
test-utils = { path = "../test-utils" }