[package]
name = "hyperdrive-wrappers"
version = { workspace = true }
edition = "2021"

# Builds the Solidity contract wrappers.
build = "build.rs"

[dependencies]

# External dependencies
ethers = "2.0.11"
ethers-solc = "2.0.8"
eyre = "0.6.8"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[build-dependencies]

# External dependencies
dotenv = "0.15.0"
ethers = "2.0.11"
eyre = "0.6.8"
filetime = "0.2"
heck = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1", features = ["full"] }
walkdir = "2"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "assets/katex_header.html"]