[package]
name = "test-utils"
edition = "2021"
version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
readme = { workspace = true }

[dependencies]

# External dependencies.
async-trait = "0.1.80"
ethers = "2.0.11"
eyre = "0.6.8"
futures-locks = "0.7.1"
lazy_static = "1.4.0"
thiserror = "1.0"